--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "gulp clean && gulp",
     "clean": "gulp clean",
     "prepare": "husky install",
-    "test": "gulp clean && gulp && gulp clean",
+    "test": "gulp clean && gulp",
     "update": "ncu",
     "update:install": "ncu -u && npm install",
     "publish": "gulp && np"
@@ -25,7 +25,7 @@
     "gulp-sass": "^5.0.0",
     "husky": "^7.0.4",
     "np": "^7.5.0",
-    "npm-check-updates": "^11.8.5",
+    "npm-check-updates": "^12.0.2",
     "sass": "^1.43.4"
   },
   "homepage": "https://github.com/Beth3346/elr-scss-layout",
