--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "version": "0.0.5",
   "author": "Elizabeth Rogers",
   "bugs": {
-    "url": "https://github.com/Beth3346/elr-scss-layout",
-    "email": "beth3346@gmail.com"
+    "url": "https://github.com/Beth3346/elr-scss-layout/issues"
   },
   "scripts": {
     "build": "parcel build src/index.html",
     "serve": "parcel serve src/index.html",
     "clean": "gulp clean",
     "prepare": "husky install",
-    "test": "echo 'no tests for scss'",
+    "test": "npm run build",
     "update": "ncu",
     "update:install": "ncu -u && npm install",
     "np": "np"
@@ -36,7 +35,16 @@
   },
   "np": {
     "yarn": false,
-    "branch": "main"
+    "branch": "main",
+    "tests": true
+  },
+  "browserslist": [
+    "last 3 versions"
+  ],
+  "sass": {
+    "includePaths": [
+      "./node_modules"
+    ]
   },
   "dependencies": {
     "elr-scss-config": "^1.1.2",
